K8S/assets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetservice
  template:
    metadata:
      labels:
        app: assetservice
    spec:
      containers:
        - name: assetservice
          image: assetstoreregistry.azurecr.io/assetservice:v0.1
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: assetservice
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: assetservice
