K8S/assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assetservice-srv
spec:
  type: NodePort
  selector:
    app: assetservice
  ports:
    - name: assetservice
      protocol: TCP
      port: 80
      targetPort: 80
