K8S/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: matthijs1999/authenticatieservice:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: authservice
