K8S/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice-srv
spec:
  type: NodePort
  selector:
    app: authservice
  ports:
    - name: authservice
      protocol: TCP
      port: 80
      targetPort: 80
