K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/asset
            pathType: Prefix
            backend:
              service:
                name: assets-depl
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: users-depl
                port:
                  number: 80
